--- a/integration/Dockerfile
+++ b/integration/Dockerfile
@@ -1,8 +1,12 @@
-FROM microsoft/dotnet:2-sdk
+FROM microsoft/dotnet:2-sdk AS build-env
 WORKDIR /integration
 
 COPY integration.csproj .
 RUN dotnet restore
 
+# Copy in all of the source
 COPY . .
+
+# Defer execution of the tests to when you "RUN" the image (ie, docker run ...) rather
+# then when you BUILD the image. So for that, we use ENTRYPOINT instead
 ENTRYPOINT ["dotnet", "test"]
